--- a/app/src/main/res/layout/activity_cast_detail.xml
+++ b/app/src/main/res/layout/activity_cast_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -48,14 +49,16 @@
 
                 <TextView
                     android:id="@+id/text_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/dp_8"
+                    android:layout_marginLeft="@dimen/dp_8"
+                    android:layout_marginRight="@dimen/dp_8"
                     android:text="@{viewModel.mCastObservableField.name}"
                     android:textColor="@color/color_teal_50_700"
                     android:textSize="@dimen/sp_20"
                     app:layout_constraintLeft_toRightOf="@id/image_cast"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/image_cast" />
 
                 <TextView
                     android:id="@+id/text_birthday"
@@ -80,6 +83,7 @@
                     android:layout_marginTop="@dimen/dp_8"
                     android:text="@string/text_biography"
                     android:textColor="@color/color_teal_50_700"
+                    android:visibility="@{viewModel.mHasBiography ? View.VISIBLE : View.GONE}"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/image_cast" />
 
@@ -96,27 +100,43 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/title_biography" />
 
-                <TextView
-                    android:id="@+id/text_movies"
-                    style="@style/StyleTextTitle"
-                    android:layout_marginLeft="@dimen/dp_16"
-                    android:text="@string/text_movies"
-                    android:textColor="@color/color_teal_50_700"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/text_biography" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler_view_movies"
+                <android.support.v7.widget.CardView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_8"
-                    android:layout_marginRight="@dimen/dp_8"
-                    android:orientation="horizontal"
-                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/text_movies"
-                    app:recyclerAdapter="@{viewModel.adapter}" />
+                    app:cardUseCompatPadding="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/text_biography">
+
+                    <android.support.constraint.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/text_movies"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/dp_8"
+                            android:text="@string/text_movies"
+                            android:textColor="@color/color_teal_50_700"
+                            android:textSize="@dimen/sp_20"
+                            android:visibility="@{viewModel.mHasMovies ? View.VISIBLE : View.GONE}" />
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/recycler_view_movies"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/dp_8"
+                            android:layout_marginRight="@dimen/dp_8"
+                            android:orientation="horizontal"
+                            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                            app:layout_constraintTop_toBottomOf="@id/text_movies"
+                            app:recyclerAdapter="@{viewModel.adapter}"
+                            tools:listitem="@layout/item_movie_by" />
+                    </android.support.constraint.ConstraintLayout>
+
+                </android.support.v7.widget.CardView>
+
             </android.support.constraint.ConstraintLayout>
 
         </android.support.v4.widget.NestedScrollView>
