--- a/app/src/main/res/layout/item_movie_by.xml
+++ b/app/src/main/res/layout/item_movie_by.xml
@@ -15,6 +15,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="@dimen/dp_2"
         android:onClick="@{() -> viewModel.onItemClick()}">
 
         <ImageView
@@ -22,6 +23,7 @@
             imageUrl="@{viewModel.mMovieObservableField.posterPath}"
             android:layout_width="@dimen/dp_100"
             android:layout_height="@dimen/dp_150"
+            android:src="@drawable/default_movie"
             android:scaleType="centerCrop"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
@@ -30,7 +32,6 @@
             android:id="@+id/text_title"
             android:layout_width="@dimen/dp_100"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_8"
             android:singleLine="true"
             android:textSize="@dimen/sp_15"
             android:text="@{viewModel.mMovieObservableField.title}"
@@ -49,7 +50,7 @@
             android:id="@+id/text_vote_average"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_8"
+            android:layout_marginTop="@dimen/dp_4"
             android:text="@{String.valueOf(viewModel.mMovieObservableField.voteAverage)}"
             app:layout_constraintLeft_toLeftOf="@id/text_title"
             app:layout_constraintTop_toBottomOf="@id/text_release_date" />
@@ -58,10 +59,10 @@
             android:id="@+id/image_star"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_8"
+            android:layout_marginTop="@dimen/dp_4"
             android:src="@drawable/ic_star"
             app:layout_constraintLeft_toRightOf="@id/text_vote_average"
-            app:layout_constraintTop_toBottomOf="@id/text_release_date" />
+            app:layout_constraintBottom_toBottomOf="@id/text_vote_average" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
